添加python数学计算博客

--- a/source/_posts/机器学习概述.md
+++ b/source/_posts/机器学习概述.md
@@ -170,11 +170,11 @@ categories: 机器学习
 
    (1) 梯度下降
 
-   ​	随机梯度下降(Stochastic Gradient Descent, SGD)
+   ​	随机梯度下降(`Stochastic Gradient Descent, SGD`)
 
-   ​	批量梯度下降(Batch Gradient Descent, BGD)
+   ​	批量梯度下降(`Batch Gradient Descent, BGD`)
 
-   ​	小批量梯度下降(Mini-batch Gradient Descent, MBGD)
+   ​	小批量梯度下降(`Mini-batch Gradient Descent, MBGD`)
 
    (2) 梯度下降的变体
 
@@ -200,25 +200,26 @@ categories: 机器学习
 
 ### 2.确定输入，收集数据
 
-​	通过多种途径得到一个有限的训练数据的集合；
+​	通过多种途径得到一个有限的训练数据的集合
 
- 	  [Kaggle数据集](https://www.kaggle.com/datasets)
 
- 	  [亚马逊数据集](https://registry.opendata.aws)
+​	[Kaggle数据集](https://www.kaggle.com/datasets)
 
-  	 [UCI机器学习库](https://archive.ics.uci.edu/ml/datasets.html)
+​	[亚马逊数据集](https://registry.opendata.aws)
 
-  	 [谷歌的数据集搜素引擎](https://toolbox.google.com/datasetsearch)
+​	[UCI机器学习库](https://archive.ics.uci.edu/ml/datasets.html)
 
-  	 [微软数据集](https://msropendata.com/)
+​	[谷歌的数据集搜素引擎](https://toolbox.google.com/datasetsearch)
 
- 	  [Awesome公共数据集](https://github.com/awesomedata/awesome-public-datasets)
+​	[微软数据集](https://msropendata.com/)
 
-  	 [计算机视觉数据集](https://www.visualdata.io/)
+​	[Awesome公共数据集](https://github.com/awesomedata/awesome-public-datasets)
 
-  	 [ImageNet](http://image-net.org/)
+​	[计算机视觉数据集](https://www.visualdata.io/)
 
-  	 [MS COCO](http://cocodataset.org/)
+​	[ImageNet](http://image-net.org/)
+
+​	[MS COCO](http://cocodataset.org/)
 
  ### 3.确定输出，选择算法
 
@@ -233,8 +234,8 @@ categories: 机器学习
 ### 4.特征工程
 
 - 数据预处理
-  - 缺失数据---> 删除 和 填充(平均数，众数)
-  - 处理特征数据---> 正规化(归一化，正则化，白化)
+  - 缺失数据---> 删除 和 填充 (平均数，众数)
+  - 处理特征数据---> 正规化 (归一化，正则化，白化)
   - 处理类别数据--->独热编码
   - 数据集划分--->训练、验证、测试
 
@@ -281,7 +282,7 @@ categories: 机器学习
   - 准确率
   - 精确率和召回率(查准率和查全率)
   - ROC和AUC
-  - $F1$和$F~{\beta}$
+  - $F_1$和$F_{\beta}$
 
 - 回归算法
 
