--- a/source/_posts/神经网络简介.md
+++ b/source/_posts/神经网络简介.md
@@ -119,3 +119,157 @@ $$
 
 ​	图中的网络一共由 3 层神经元构成, 但实质上只有 2层神经元有权重，因此将其称为“2层网络”。
 
+
+
+## 1.2 激活函数
+
+​	神经网络与感知机的一个最大区别是它使用了“阶跃函数”之外的其他激活函数，比如sigmoid函数。sigmoid函数相比"阶跃函数"更佳平滑.
+
+​	阶跃函数和sigmoid函数均为非线性函数, 线性函数是一条笔直的直线，而非线性函数，顾名思义，指的是不像线性函数那样呈现出一条直线的函数。
+
+​	激活函数一定是非线性函数，它的主要作用就是增加神经网络的非线性，因为线性函数的线性组合还是线性函数，这样的话多层神经网络就没有意义。
+
+​	输出层的激活函数，要根据求解问题的性质决定。一般地，回归问题可以使用恒等函数，二元问题可以使用sigmoid函数，多元分类问题可以使用softmax函数。所谓恒等函数，就是按输入原样输出，对于输入的信息，不加任何改动地直接输出。
+
+​	常见的激活函数:
+
+- 阶跃函数:  
+
+$$
+h(x) =\begin{cases}1, & x > 0 \\0, & x \leq 0\end{cases}
+$$
+
+​	![](神经网络简介/n2.png)
+
+
+
+-  sigmoid函数(S函数)
+  $$
+  h(x) = \dfrac {1}{1+e^{-x}}
+  $$
+  
+
+  ![](神经网络简介/n3.png)
+
+- Relu函数
+  $$
+  h(x) =\begin{cases}x, & x > 0 \\0, & x \leq 0\end{cases}
+  $$
+  
+
+  ![](神经网络简介/n4.png)
+
+- softmax函数
+
+$$
+\sigma(x) =  \dfrac {e^{a_k}}{ \sum_{i=1}^n e^{a^i}   }
+$$
+
+**注意**: softmax函数有一个缺陷就是溢出问题，softmax函数的实现中要进行指数函数的运算，但是此时指数函数的值很容易变得非常大。如，$e^{1000}$的结果会返回一个表示无穷大的inf。
+
+改进: 先进行归一化，在求值
+
+```python
+a = np.array([1010, 1000, 990])
+np.exp(a) / np.sum(np.exp(a))
+#  array([nan, nan, nan])  没有计算正确的值
+
+mi = np.min(a)     # 990                                 
+ma = np.max(a)                                 
+nor = (a-mi)/(ma-mi)    # 归一化 array([1. , 0.5, 0. ])   
+np.exp(nor)/np.sum(np.exp(nor))                 
+# array([0.50648039, 0.30719589, 0.18632372])
+
+```
+
+​	一般而言，神经网络只把输出值最大的神经元所对应的类别作为识别结果。并且，即便使用softmax函数，输出值最大的神经元的位置也不会变。因此，神经网络在进行分类时，输出层的softmax函数可以省略。在实际的问题中，由于指数函数的运算需要一定的计算机运算量，因此**输出层的softmax函数一般会被省略**
+
+​	求解机器学习问题的步骤可以分为“学习” A 和“推理”两个阶段。首先， 在学习阶段进行模型的学习 ，然后，在推理阶段，用学到的模型对未知的数据进行推理（分类）。如前所述，推理阶段一般会省略输出层的 softmax 函数。在输出层使用 softmax 函数是因为它和
+神经网络的学习有关系
+
+
+
+
+
+## 1.3 3层神经网络
+
+​	![](神经网络简介/n7.png)
+
+3层神经网络：输入层（第0层）有2个神经元，第1个隐藏层（第1层）有3个神经元，第2个隐藏层（第2层）有2个神经元，输出层（第3层）有2个神经元
+
+
+
+![](神经网络简介/n6.png)
+
+​								图２－６权重的符号
+
+请注意，偏置的右下角的索引号只有一个。这是因为前一层的偏置神经元（神经元“1”）只有一个，索引表示的是后一层神经元的索引。
+
+数学公式表示$a_1^{(1)}$
+$$
+a_1^{(1)} = a_{11}^{(1)}x1 + w_{12}^{(1)}x2 + b_1^{(1)}
+$$
+矩阵$W^{(1)}$表示第１层的权重：
+$$
+W^{(1)} = \begin{pmatrix}w_{11}^{(1)} & w_{12}^{(1)} & w_{13}^{(1)}\\\\w_{12}^{(1)} &w_{22}^{(1)} &w_{32}^{(1)}\end{pmatrix}
+$$
+向量$B^{(1)}$表示第一层的偏置:
+$$
+\begin{pmatrix} b_1^{(1)} & b_2^{(1)} & b_3^{(1)}\\ \end{pmatrix} \quad
+$$
+
+$$
+A^{(1)} = \begin{pmatrix} a_1^{(1)} & a_2^{(1)} & a_3^{(1)}\\ \end{pmatrix} \quad
+$$
+
+$$
+X^{(1)} = \begin{pmatrix} x_1 & x_2\\ \end{pmatrix} \quad
+$$
+
+第１层的加权和表示:
+$$
+A^{(1)} = XW^{(1)} + B^{(1)}
+$$
+
+
+
+# 三、神经网络的学习
+
+​	神经网络的学习就是从训练数据学习权重参数，然后使用刚才学习到的参数对输入数据进行预测。
+
+​	神经网络学习的策略是首先对输入数据进行前向传播(forward propagation)过程得到输出，然后计算输出与真实值之间的差别，最后通过反向传播跟新权重参数，重复这一过程直到权重参数没有更新，此时损失函数达到最小。
+
+​	计算输出与真实值之间的差别通过损失函数计算。反向传播需要用到梯度下降算法实现。
+
+
+
+## 1.损失函数
+
+​	损失函数是表示神经网络性能的指标。神经网络通过减小损失函数，寻找最优权重参数。常用的误差函数有均方误差和交叉熵误差等。
+
+- 均方误差(mean squared error MSE)
+
+$$
+E = \frac {1}{2} \sum_{k}({y_k - t_k})^2
+$$
+
+​	$y_k$表示神经网络的输出，$t_k$表示目标数据，k表示输出数据的维度，比如　手写数字识别的输出数据的维度是10 (0-9)。
+
+- 交叉熵误差(cross entropy error)
+  $$
+  E = - \sum_{k}t_k\log y_k
+  $$
+  上式是一条数据的误差，如果批量计算多条数据则函数为:
+  $$
+  E = - \frac{1}{N}\sum_{N}\sum_{k}t_{nk}\log y_{nk}
+  $$
+  假设数据有N个， $t_{nk}$表示第n个数据的第k个元素的值（$y_{nk}$是神
+  经网络的输出， $t_{nk}$是目标数据）, 不过最后还要除以N, 通过这样的
+  平均化，可以获得和训练数据的数量无关的统一指标。
+
+## 2.梯度下降
+
+
+
+## 3.误差反向传播
+
