--- a/source/_posts/神经网络简介.md
+++ b/source/_posts/神经网络简介.md
@@ -269,7 +269,53 @@ $$
 
 ## 2.梯度下降
 
+​	梯度是导数对多元函数的推广，它是多元函数对各个变量偏导形成的向量。多元函数的梯度定义为:
+$$
+\triangledown(x) = \begin{pmatrix} \frac{\partial f}{\partial x_1}, & ..., & \frac{\partial f}{\partial x_n}\\  \end{pmatrix}^{T} \quad
+$$
+　其中$\triangledown$称为梯度算子，它作用与一个多元函数，得到一个向量。梯度是一个向量，即有大小又有方向，大小为该点的变化率，方向是该点增加最快的方向，-$\triangledown$(x)就为减小最快的方向。所以只要沿着梯度的反方向就可能达到函数的驻点，可能是局部极小值，全局极小值或鞍点。
 
+​	在梯度下降法中，函数的取值从当前位置沿着梯度反方向前进一定距离，然后在新的地方重新求梯度，再沿着新梯度反方向前进，如此反复，不断地沿梯度方向前进。像这样，通过不断地沿梯度反方向前进，逐渐减小函数值的过程就是梯度下降法（gradient descent method）。
+
+​	梯度法是解决机器学习中最优化问题的常用方法，特别是在神经网络的学习中经常被使用。寻找最小值的梯度法称为梯度下降法（gradient descent method），寻找最大值的梯度法称为梯度上升法（gradient ascent method）。但是通过反转损失函数的符号，求最小值的问题和求最大值的问题会变成相同的问题。
+
+数学公式来表示梯度下降方法:
+$$
+x_0 = x_0 - \eta \frac {\partial f}{\partial x_0}
+$$
+
+$$
+x_1 = x_1 - \eta \frac {\partial f}{\partial x_1}
+$$
+
+$\eta$是学习率，表示根据梯度值变化的幅度，x在神经网络中代表权重.
+
+​	控制梯度下降的幅度
+
+​	0.1	0.01	0.001	....
+
+​	如果学习率太大，误差会逐步增大
+
+​	如果学习率较大，误差会来回震荡
+
+​	如果学习率太小， 误差下降缓慢
+
+​	![](神经网络简介/n8.png)
+
+​					图　$f(x_0, x_1) = x_0^2 + x_1^2$的梯度下降更新过程:虚线是函数的等高线
+
+神经网络的学习分成下面4个步骤:
+**步骤1（ mini-batch）**
+	从训练数据中随机选出一部分数据，这部分数据称为mini-batch。我们的目标是减小mini-batch的损失函数的值。
+**步骤2（计算梯度）**
+	为了减小mini-batch的损失函数的值，需要求出各个权重参数的梯度。
+**步骤3（更新参数）**
+	将权重参数沿梯度方向进行微小更新。		
+
+**步骤4（重复）**
+	重复步骤1、步骤2、步骤3, 直到梯度为０或接近０．
+
+​		
 
 ## 3.误差反向传播
 
