深度学习之CNN的演化

--- a/source/_posts/深度学习之优化算法.md
+++ b/source/_posts/深度学习之优化算法.md
@@ -65,7 +65,7 @@ class SGD:
 
 # 三、Momentum
 
-​	Momentum是"动量"的意思。动量方法旨在加速学习，特别是在面对小而连续的梯度但是含有很多噪声的时候。动量模拟了物体运动是的惯性，即在更新的时候在一定程度上会考虑之前更新的方向，同时利用当前batch的梯度微调最终的结果。这样则可以在一定程度上增加稳定性，从而更快的学习。
+​	Momentum是"动量"的意思。动量方法旨在加速学习，特别是在面对小而连续的梯度但是含有很多噪声的时候。动量模拟了物体运动的惯性，即在更新的时候在一定程度上会考虑之前更新的方向，同时利用当前batch的梯度微调最终的结果。这样则可以在一定程度上增加稳定性，从而更快的学习。
 
 **数学公式**
 $$
