--- a/source/_posts/机器学习之评估指标.md
+++ b/source/_posts/机器学习之评估指标.md
@@ -112,8 +112,11 @@ $$
 
 查准率和查全率的定义如下：
 
-- 查全率：在**被诊断**患有癌症的所有人中，多少人确实**得了癌症**？
-- 查准率：在**患有癌症**的所有人中，多少人**被诊断**患有癌症？
+- 查全率：在**患有癌症**的所有人中，多少人**被诊断**患有癌症？
+
+- 查准率：在**被诊断**患有癌症的所有人中，多少人确实**得了癌症**？
+
+  
 
 从这里可以看出，敏感性就是查全率，但特异性并不是查准率。
 
