--- a/source/_posts/深度学习之过拟合.md
+++ b/source/_posts/深度学习之过拟合.md
@@ -44,7 +44,7 @@ categories: 深度学习
 $$
 L_1(\theta) = loss(\theta) + \lambda\sum_{i=1}^n|w_i|
 $$
-**L2正则化(权值衰减)**
+**L2正则化（权值衰减）**
 $$
 L_2(\theta) = loss(\theta) + \lambda\sum_{i=1}^nw_i^2
 $$
@@ -57,14 +57,11 @@ $$
 
 ## 3、权重初始化
 
-上面介绍抑制过拟合、提高泛化能力的技巧——权值衰减（weight decay）。简单地说，权值衰减就是一种以减小权重参数的值为目的进行学习
-的方法。通过减小权重参数的值来抑制过拟合的发生。 
+上面介绍抑制过拟合、提高泛化能力的技巧——权值衰减（weight decay）。简单地说，权值衰减就是一种以减小权重参数的值为目的进行学习的方法。通过减小权重参数的值来抑制过拟合的发生。 
 
 如果想减小权重的值，一开始就将初始值设为较小的值才是正途。 
 
-为什么不能将权重初始值设为0呢？严格地说，为什么不能将权重初始
-值设成一样的值呢？这是因为在误差反向传播法中，所有的权重值都会进行
-相同的更新。 为了防止“权重均一化”，必须随机生成初始值。 
+为什么不能将权重初始值设为0呢？严格地说，为什么不能将权重初始值设成一样的值呢？这是因为在误差反向传播法中，所有的权重值都会进行相同的更新。 为了防止“权重均一化”，必须随机生成初始值。 
 
 各层的激活值的分布都要求有适当的广度。为什么呢？因为通过在各层间传递多样性的数据，神经网络可以进行高效的学习。反过来，如果传递的是有所偏向的数据，就会出现梯度消失或者“表现力受限”的问题，导致学习可能无法顺利进行。 
 
