--- a/source/_posts/上采样之转置卷积.md
+++ b/source/_posts/上采样之转置卷积.md
@@ -17,7 +17,7 @@ categories: 计算机视觉
 
 # 前言
 
-本文翻译自[《Up-sampling with Transposed Convolution》][https://medium.com/activating-robotic-minds/up-sampling-with-transposed-convolution-9ae4f2df52d0]，这篇文章对转置卷积和反卷积有着很好的解释。
+本文翻译自[《Up-sampling with Transposed Convolution》](https://medium.com/activating-robotic-minds/up-sampling-with-transposed-convolution-9ae4f2df52d0)，这篇文章对转置卷积和反卷积有着很好的解释。
 
 
 
@@ -30,13 +30,13 @@ categories: 计算机视觉
 ![](01.png)
 
 
-对于这种上采样(up-sampling)操作，目前有着一些插值方法进行处理：
+对于这种上采样（up-sampling）作，目前有着一些插值方法进行处理：
 
-1. 最近邻插值(Nearest neighbor interpolation)
+1. 最近邻插值（Nearest neighbor interpolation）
 
-2. 双线性插值(Bi-Linear interpolation)
+2. 双线性插值（Bi-Linear interpolation）
 
-3. 双立方插值(Bi-Cubic interpolation)
+3. 双立方插值（Bi-Cubic interpolation）
 
    
 
@@ -48,17 +48,17 @@ categories: 计算机视觉
 
 # 二、为什么是转置卷积
 
-转置卷积(Transposed Convolution)常常在一些文献中也称之为反卷积(Deconvolution)和部分跨越卷积(Fractionally-strided Convolution)，因为称之为反卷积容易让人以为和数字信号处理中反卷积混起来，造成不必要的误解，因此下文都将称为转置卷积，并且建议各位不要采用反卷积这个称呼。
+转置卷积（Transposed Convolution）常常在一些文献中也称之为反卷积（Deconvolution）和部分跨越卷积（Fractionally-strided Convolution），因为称之为反卷积容易让人以为和数字信号处理中反卷积混起来，造成不必要的误解，因此下文都将称为转置卷积，并且建议各位不要采用反卷积这个称呼。
 
 如果我们想要我们的网络可以学习到最好地上采样的方法，我们这个时候就可以采用转置卷积。这个方法不会使用预先定义的插值方法，它具有可以学习的参数。理解转置卷积这个概念是很重要的，因为它在若干重要的文献中都有所应用，如：
 
-1. 在[DCGAN][https://arxiv.org/pdf/1511.06434v2.pdf]中的生成器将会用随机值转变为一个全尺寸(full-size)的图片，这个时候就需要用到转置卷积。
+1. 在[DCGAN](https://arxiv.org/pdf/1511.06434v2.pdf)中的生成器将会用随机值转变为一个全尺寸（full-size）的图片，这个时候就需要用到转置卷积。
 2. 在语义分割中，会使用卷积层在编码器中进行特征提取，然后在解码层中进行恢复为原先的尺寸，这样才可以对原来图像的每个像素都进行分类。这个过程同样需要用到转置卷积。
 
 
 
 # 三、卷积操作
- 让我们回顾下卷积操作是怎么工作的，并且我们将会从一个小例子中直观的感受卷积操作。假设我们有一个4×4的矩阵，我们将在这个矩阵上应用3×3的卷积核，并且不添加任何填充(padding)，步进参数(stride)设置为1，就像下图所示，输出为一个2×2的矩阵。
+ 让我们回顾下卷积操作是怎么工作的，并且我们将会从一个小例子中直观的感受卷积操作。假设我们有一个4×4的矩阵，我们将在这个矩阵上应用3×3的卷积核，并且不添加任何填充（padding），步进参数（stride）设置为1，就像下图所示，输出为一个2×2的矩阵。
 
 ![](02.png)
 
@@ -70,12 +70,12 @@ categories: 计算机视觉
 
 
 
-这种卷积操作使得输入值和输出值之间存在有位置上的连接关系，举例来说，输入矩阵左上方的值将会影响到输出矩阵的左上方的值。更具体而言，3×3的卷积核是用来连接输入矩阵中的9个值，并且将其转变为输出矩阵的一个值的。一个卷积操作是一个多对一(many-to-one)的映射关系。让我们记住这个，我们接下来将会用得着。
+这种卷积操作使得输入值和输出值之间存在有位置上的连接关系，举例来说，输入矩阵左上方的值将会影响到输出矩阵的左上方的值。更具体而言，3×3的卷积核是用来连接输入矩阵中的9个值，并且将其转变为输出矩阵的一个值的。一个卷积操作是一个多对一（many-to-one）的映射关系。让我们记住这个，我们接下来将会用得着。
 
 
 
 # 四、反过来操作
-现在，假设我们想要反过来操作。我们想要将输入矩阵中的一个值映射到输出矩阵的9个值，这将是一个一对多(one-to-many)的映射关系。这个就像是卷积操作的反操作，其核心观点就是用转置卷积。举个例子，我们对一个2×2的矩阵进行上采样为4×4的矩阵。这个操作将会维护一个1对应9的映射关系。
+现在，假设我们想要反过来操作。我们想要将输入矩阵中的一个值映射到输出矩阵的9个值，这将是一个一对多（one-to-many）的映射关系。这个就像是卷积操作的反操作，其核心观点就是用转置卷积。举个例子，我们对一个2×2的矩阵进行上采样为4×4的矩阵。这个操作将会维护一个1对应9的映射关系。
 
 ![](04.png)
 
@@ -84,7 +84,7 @@ categories: 计算机视觉
 因此就结论而言，卷积操作是多对一，而转置卷积操作是一对多。
 
 
-但是我们将如何具体操作呢？为了接下来的讨论，我们需要定义一个卷积矩阵(convolution matrix)和相应的转置卷积矩阵(transposed convolution matrix)。
+但是我们将如何具体操作呢？为了接下来的讨论，我们需要定义一个卷积矩阵（convolution matrix）和相应的转置卷积矩阵（transposed convolution matrix）。
 
 
 
@@ -102,13 +102,13 @@ categories: 计算机视觉
 
 
 
-这个便是卷积矩阵了，这个矩阵的每一行都定义了一个卷积操作。下图将会更加直观地告诉你这个重排列是怎么进行的。每一个卷积矩阵的行都是通过重新排列卷积核的元素，并且添加0补充(zero padding)进行的。
+这个便是卷积矩阵了，这个矩阵的每一行都定义了一个卷积操作。下图将会更加直观地告诉你这个重排列是怎么进行的。每一个卷积矩阵的行都是通过重新排列卷积核的元素，并且添加0补充（zero padding）进行的。
 
 ![](07.png)
 
 
 
-为了将卷积操作表示为卷积矩阵和输入矩阵的向量乘法，我们将输入矩阵4×4摊平(flatten)为一个列向量，形状为16×1，如下图所示。
+为了将卷积操作表示为卷积矩阵和输入矩阵的向量乘法，我们将输入矩阵4×4摊平（flatten）为一个列向量，形状为16×1，如下图所示。
 
 ![](08.png)
 
@@ -125,13 +125,13 @@ categories: 计算机视觉
 
 简单来说，这个卷积矩阵除了重新排列卷积核的权重之外就没有啥了，然后卷积操作可以通过表示为卷积矩阵和输入矩阵的列向量形式的矩阵乘积形式进行表达。
 
-所以各位发现了吗，关键点就在于这个卷积矩阵，你可以从16(4×4)到4(2×2)因为这个卷积矩阵尺寸正是4×16的，然后呢，如果你有一个16×4的矩阵，你就可以从4(2×2)到16(4×4)了，这不就是一个上采样的操作吗？
+所以各位发现了吗，关键点就在于这个卷积矩阵，你可以从16（4×4）到4（2×2）因为这个卷积矩阵尺寸正是4×16的，然后呢，如果你有一个16×4的矩阵，你就可以从4（2×2）到16（4×4）了，这不就是一个上采样的操作吗？
 
 
 
 # 六、转置卷积矩阵
 
-我们想要从4(2×2)到16(4×4)，因此我们使用了一个16×4的矩阵，但是还有一件事情需要注意，我们是想要维护一个1到9的映射关系。
+我们想要从4（2×2）到16（4×4），因此我们使用了一个16×4的矩阵，但是还有一件事情需要注意，我们是想要维护一个1到9的映射关系。
 
 假设我们转置这个卷积矩阵$C  (4×16)$变为$C^T (16×4)$。我们可以对$C^T$和列向量$(4×1)$进行矩阵乘法，从而生成一个16×1的输出矩阵。这个转置矩阵正是将一个元素映射到了9个元素。
 
@@ -152,5 +152,5 @@ categories: 计算机视觉
 
 从本质来说，转置卷积不是一个卷积，但是我们可以将其看成卷积，并且当成卷积这样去用。我们通过在输入矩阵中的元素之间插入0进行补充，从而实现尺寸上采样，然后通过普通的卷积操作就可以产生和转置卷积相同的效果了。你在一些文章中将会发现他们都是这样解释转置卷积的，但是这个因为在卷积操作之前需要通过添加0进行上采样，因此是比较低效率的。
 
-**注意**：转置卷积会导致生成图像中出现棋盘效应(checkerboard artifacts)，这篇文章[《Deconvolution and Checkerboard Artifacts》][https://distill.pub/2016/deconv-checkerboard/]推荐了一种上采样的操作（也就是插值操作），这个操作接在一个卷积操作后面以减少这种现象。如果你的主要目的是生成尽可能少棋盘效应的图像，那么这篇文章就值得你去阅读。
+**注意**：转置卷积会导致生成图像中出现棋盘效应（checkerboard artifacts），这篇文章[《Deconvolution and Checkerboard Artifacts》](https://distill.pub/2016/deconv-checkerboard/)推荐了一种上采样的操作（也就是插值操作），这个操作接在一个卷积操作后面以减少这种现象。如果你的主要目的是生成尽可能少棋盘效应的图像，那么这篇文章就值得你去阅读。
 
